AM-141 Extend the version api call to include the service's version
